test/1.2/errors/T_EAUTOPARAM.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

port p0 {
    /// ERROR EAUTOPARAM
    parameter foo auto;
}

port p1 {
    /// ERROR EAUTOPARAM
    parameter bar auto;
    parameter bar = 1;
}

/// ERROR EAUTOPARAM
port p2 {
    parameter qname default "";
}

/// ERROR EAUTOPARAM
port p3 {
    parameter qname = "";
}

/// ERROR EAUTOPARAM
attribute a1[i in 0..3] {
    parameter i = 1;
}

/// ERROR EAUTOPARAM
attribute a2[dev in 0..3];
